Don't use jQuery's $ function at the global level, as this will conflict with other !JavaScript libraries.
Many thanks to Paul Irish for having completed that big task!

Closes #5954.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6572 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_logging.html
+++ b/trac/admin/templates/admin_logging.html
@@ -8,7 +8,7 @@
   <head>
     <title>Logging</title>
     <script type="text/javascript">/*<![CDATA[*/
-      $(document).ready(function() {
+      jQuery(document).ready(function($) {
         $("#log_type").change(function() {
           $("#log_level").enable(this.selectedIndex > 0);
           $("#log_file").enable(this.options[this.selectedIndex].value == "file");
