--- a/trac/search/templates/search.html
+++ b/trac/search/templates/search.html
@@ -14,7 +14,7 @@
         <meta name="itemsPerPage" content="$results.max_per_page"/>
     </py:if>
     <script type="text/javascript">
-      $(document).ready(function() {$("#q").get(0).focus()});
+      jQuery(document).ready(function($) {$("#q").get(0).focus()});
     </script>
   </head>
 
