--- a/trac/ticket/templates/milestone_view.html
+++ b/trac/ticket/templates/milestone_view.html
@@ -9,7 +9,7 @@
   <head>
     <title>Milestone ${milestone.name}</title>
     <script type="text/javascript">
-      $(document).ready(function() {
+      jQuery(document).ready(function($) {
         $("#content").find("h1,h2,h3,h4,h5,h6").addAnchor("Link to this section");
       });
     </script>
