Follow-up to r6572: actually a couple more embedded script sections needed to be fixed.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6576 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_milestones.html
+++ b/trac/admin/templates/admin_milestones.html
@@ -40,7 +40,7 @@
               <em>Format: $datetime_hint</em>
             </label>
             <script type="text/javascript">
-              $(document).ready(function() {
+              jQuery(document).ready(function($) {
                 function updateCompletedDate() {
                   $("#completeddate").enable($("#completed").checked());
                 }
