--- a/trac/versioncontrol/templates/diff_form.html
+++ b/trac/versioncontrol/templates/diff_form.html
@@ -8,7 +8,7 @@
   <head>
     <title>Prepare Diff</title>
     <script type="text/javascript">
-      $(document).ready(function() {
+      jQuery(document).ready(function($) {
         $("#anydiff input[@name$='_path']").suggest();
       });
     </script>
