More polish on the blame feature: added a button for closing the changeset popup window.
Note that either I'm doing something wrong or Firefox is behaving strangely here: it seems that the <h1> title shadows the "Close" button w.r.t. the mouse events. This problem doesn't happen with either IE7 or Opera, so I added a workaround for Firefox only.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6599 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/browser.css
+++ b/trac/htdocs/css/browser.css
@@ -32,12 +32,14 @@ table.code th.blame { width: 5em; }
 table.code th.blame a { color: #ddd; }
 
 div.message { 
-  background: #ccf;
-  border: 2px ridge #999;
+  background: #f7f7f0;
+  border: 3px double #d7d7d7;
   margin: 0;
   padding: 8px; 
   /* Note: border width and padding must be compensated for in the placement */
 }
+
+div.message div.inlinebuttons { float: right;  }
 
 /* Styles for the directory entries table
    (extends the styles for "table.listing") */
