Custom ticket queries cosmetic fix, as a direct follow-up to r6569: reduce waste of vertical space. See #6674.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6621 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/report.css
+++ b/trac/htdocs/css/report.css
@@ -20,7 +20,11 @@ h2 {
 #query { clear: right }
 #query fieldset, #query fieldset input, #query fieldset select { font-size: 11px }
 #query fieldset { margin-top: 1em }
-#query fieldset.collapsed { border-width: 0 }
+#query fieldset.collapsed { 
+ border-width: 0;
+ margin-bottom: 0pt;
+ padding: 0pt .5em;
+}
 #query .option, #query .option input, #query .option select { font-size: 11px }
 #query .option { float: left; line-height: 2em; margin: .9em 2.5em 0 .5em; padding: 0 0 .1em }
 #query .buttons { float: right; margin-top: .5em }
