Minimalistic fix for #6185: don't use the trac_banner.png as the logo for new environments.
Instead, strongly suggest to configure a suitable logo for the project.


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6654 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/layout.html
+++ b/trac/templates/layout.html
@@ -38,7 +38,7 @@
   <py:match path="body" once="true"><body>
     <div id="banner">
       <div id="header" py:choose="">
-        <a py:when="chrome.logo.src" id="logo" href="${chrome.logo.link}"><img
+        <a py:when="chrome.logo.src" id="logo" href="${chrome.logo.link or href.wiki('TracIni')+'#header_logo-section'}"><img
           src="${chrome.logo.src}" alt="${chrome.logo.alt}"
           height="${chrome.logo.height or None}" width="${chrome.logo.width or None}" /></a>
         <h1 py:otherwise=""><a href="${chrome.logo.link}">${project.name}</a></h1>
