Minor cosmetic improvement for the About / Configuration view.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6655 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/about.css
+++ b/trac/htdocs/css/about.css
@@ -13,7 +13,6 @@
 #content.about #config th, #content.about #config td { border: 1px solid #ddd;
   padding: 3px;
 }
-#content.about #config td.value { font-family: monospace; }
-#content.about #config tr.modified { background: #fee; }
-#content.about #config tr.modified td.value { font-weight: bold; }
+#content.about #config tr.modified { background: #ffd; }
+#content.about #config tr.modified td.value { font-style: italic; }
 #content.about #config td.doc { padding: 3px 1em; }
