--- a/trac/templates/error.html
+++ b/trac/templates/error.html
@@ -31,7 +31,13 @@
        $("#traceback ul").show();
        $("#traceback pre").hide();
        $("#tbtoggle").parent().show();
-
+       
+       $("#systeminfo").append("<tr><th>jQuery:</th><td>"+$().jquery+"</td></tr>");
+       $("#systeminfo").before("<p>User Agent: <tt>"+navigator.userAgent+"</tt></p>");
+      });
+    /*]]>*/</script>
+    <script type="text/javascript">/*<![CDATA[*/
+      jQuery(document).ready(function($) {
        var descr = $("#description").text();
        descr = descr.replace(/==== System Information ====\s+/m,
          "User Agent was: `" + navigator.userAgent + "`\n\n$&"
@@ -40,9 +46,6 @@
          "||\n|| '''jQuery:''' || `" + $().jquery + "` $&"
        );
        $("#description").text(descr);
-
-       $("#systeminfo").append("<tr><th>jQuery:</th><td>"+$().jquery+"</td></tr>");
-       $("#systeminfo").before("<p>User Agent: <tt>"+navigator.userAgent+"</tt></p>");
       });
     /*]]>*/</script>
   </head>
@@ -53,7 +56,8 @@
     <input py:if="teo" type="hidden" name="version"
            value="${'dev' in trac.version and 'devel' or trac.version}" />
     <input type="hidden" name="summary" value="$message" />
-    <textarea name="description" rows="3" cols="10">
+    <textarea id="description" name="description" rows="3" cols="10">
+
 ==== How to Reproduce ====
 
 While doing a $req.method operation on `$req.path_info`, Trac issued an internal error.
