--- a/trac/prefs/templates/prefs_datetime.html
+++ b/trac/prefs/templates/prefs_datetime.html
@@ -11,16 +11,15 @@
   <body>
 
     <div class="field" py:with="session_tzname = settings.session.get('tz');
-                                default_tzname = timezones[len(timezones)/2];
-                                selected_tz = timezone(session_tzname or default_tzname) or timezone(default_tzname) or utc;
-                                selected_tzname = '%s' % selected_tz">
+                                selected_tz = timezone(session_tzname) or utc">
       <label>Time zone:
       <select name="tz">
         <option>Default time zone</option>
         <option py:for="tzname in timezones"
-                selected="${selected_tzname.startswith('Etc/') and
+                selected="${session_tzname != None and
+                            session_tzname.startswith('Etc/') and
                             selected_tz == timezone(tzname) or
-                            selected_tzname == tzname or None}">$tzname</option>
+                            session_tzname == tzname or None}">$tzname</option>
       </select></label>
       <p class="hint">Configuring your time zone will result in all
       dates and times displayed on this site to use your time zone
@@ -29,8 +28,8 @@
       <p class="hint" py:with="now = datetime.now(utc)">
         Example: The current time is <strong>${format_time(now, 'iso8601', tzinfo=utc)}</strong> (UTC).
         <br />
-        In ${session_tzname and 'your' or ''} time zone ${selected_tz.tzname(None)}, this would be displayed as
-        <strong>${format_time(now, 'iso8601', tzinfo=selected_tz)}</strong>.
+        In ${session_tzname and 'your' or 'the Default'} time zone ${session_tzname and ' ' + selected_tz.tzname(None) or ''}, this would be displayed as
+        <strong>${format_time(now, 'iso8601', tzinfo=(session_tzname and selected_tz or localtz))}</strong>.
       </p>
 
       <p class="hint">
