--- a/trac/templates/layout.html
+++ b/trac/templates/layout.html
@@ -34,59 +34,10 @@
           class="${classes(first_last(idx, chrome.nav[category]), active=item.active)}">${item.label}</li>
     </ul>
   </div>
-
+  
   <py:match path="body" once="true"><body>
-    <div id="banner">
-      <div id="header" py:choose="">
-        <a py:when="chrome.logo.src" id="logo" href="${chrome.logo.link or href.wiki('TracIni')+'#header_logo-section'}"><img
-          src="${chrome.logo.src}" alt="${chrome.logo.alt}"
-          height="${chrome.logo.height or None}" width="${chrome.logo.width or None}" /></a>
-        <h1 py:otherwise=""><a href="${chrome.logo.link}">${project.name}</a></h1>
-      </div>
-      <form id="search" action="${href.search()}" method="get">
-        <div py:if="'SEARCH_VIEW' in perm">
-          <label for="proj-search">Search:</label>
-          <input type="text" id="proj-search" name="q" size="18" accesskey="f" value="" />
-          <input type="submit" value="Search" />
-        </div>
-      </form>
-      ${navigation('metanav')}
-    </div>
-    ${navigation('mainnav')}
-
-    <div id="main">
-      <div id="ctxtnav" class="nav">
-        <h2>Context Navigation</h2>
-          <ul>
-            <li py:for="i, elm in enumerate(chrome.ctxtnav)" class="${i == 0 and 'first ' or None}${i+1 == len(chrome.ctxtnav) and 'last' or None}">$elm</li>
-          </ul>
-        <hr />
-      </div>
-      <div id="warning" py:if="chrome.warnings" class="system-message">
-        <py:choose test="len(chrome.warnings)">
-          <py:when test="1">
-            <strong>Warning:</strong> ${chrome.warnings[0]}
-          </py:when>
-          <py:otherwise>
-            <strong>Warnings:</strong>
-            <ul><li py:for="w in chrome.warnings">$w</li></ul>
-          </py:otherwise>
-        </py:choose>
-      </div>
-      <div id="notice" py:if="chrome.notices" class="system-message">
-        <py:choose test="len(chrome.notices)">
-          <py:when test="1">
-            <strong>Notice:</strong> ${chrome.notices[0]}
-          </py:when>
-          <py:otherwise>
-            <strong>Notices:</strong>
-            <ul><li py:for="w in chrome.notices">$w</li></ul>
-          </py:otherwise>
-        </py:choose>
-      </div>
-
-      ${select('*|text()')}
-
+    ${select('*|text()')}
+    
       <script type="text/javascript" py:if="chrome.late_links">
         <py:for each="link in chrome.late_links.get('stylesheet')">
           jQuery.loadStyleSheet("${link.href}", "${link.title}");
@@ -105,20 +56,9 @@
           </li>
         </ul>
       </div>
-    </div>
-
-    <div id="footer" xml:lang="en"><hr/>
-      <a id="tracpowered" href="http://trac.edgewall.org/"><img
-        src="${chrome.htdocs_location}trac_logo_mini.png" height="30"
-        width="107" alt="Trac Powered"/></a>
-      <p class="left">
-        Powered by <a href="${href.about()}"><strong>Trac ${trac.version}</strong></a><br />
-        By <a href="http://www.edgewall.org/">Edgewall Software</a>.
-      </p>
-      <p class="right">${chrome.footer}</p>
-    </div>
-  </body></py:match>
-
+    </body></py:match>
+    
+  <xi:include href="$chrome.theme"><xi:fallback /></xi:include>
   <xi:include href="site.html"><xi:fallback /></xi:include>
 
 </html>
