Disable match template buffering in layout templates.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6756 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin.html
+++ b/trac/admin/templates/admin.html
@@ -11,7 +11,7 @@
     ${select("*[local-name() != 'title']")}
   </head></py:match>
 
-  <py:match path="body" once="true"><body>
+  <py:match path="body" once="true" buffer="false"><body>
     <div id="content" class="admin">
       <h1>Administration</h1>
       <div id="tabs">
