Fix a few typos in the late stylesheet loading code.
Thanks to Dave Gynn for the report and the patch!


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6825 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/layout.html
+++ b/trac/templates/layout.html
@@ -33,7 +33,7 @@
 
     <script type="text/javascript" py:if="chrome.late_links">
       <py:for each="link in chrome.late_links.get('stylesheet')">
-        jQuery.loadStyleSheet("${link.href}", "${link.title}");
+        jQuery.loadStyleSheet("${link.href}", "${link.type}");
       </py:for>
     </script>
     <script py:for="script in chrome.late_scripts"
