Added a new TICKET_EDIT_DESCRIPTION permission, fixes #3163.
Thanks to trac-ja for providing a patch for this.

Together with #2945 (ticket description history), this makes it possible to use tickets in a way closer to the "Wiki" spirit (anyone can contribute but all changes are traced).


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6833 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -287,7 +287,7 @@ ${comment}</textarea></p>
                 </td>
               </tr>
             </py:if>
-            <py:if test="'TICKET_ADMIN' in perm(ticket.resource) or not ticket.exists">
+            <py:if test="'TICKET_EDIT_DESCRIPTION' in perm(ticket.resource) or not ticket.exists">
               <tr>
                 <th><label for="field-description">Description:</label></th>
                 <td class="fullrow" colspan="3">
