--- a/trac/ticket/templates/milestone_view.html
+++ b/trac/ticket/templates/milestone_view.html
@@ -56,6 +56,10 @@
             <tr py:for="group in groups">
               <th scope="row" py:choose="">
                 <i py:when="not group.name"><a href="${group.stats_href}">(none)</a></i>
+                <a py:when="grouped_by in ['owner', 'reporter']"
+                        py:with="obfus_name = format_author(group.name)"
+                        py:strip="obfus_name != group.name"
+                        href="${group.stats_href}">${obfus_name}</a>
                 <a py:otherwise="" href="${group.stats_href}">${group.name}</a>
               </th>
               <td>
