Workaround display glitch for progress bars in Safari (closes #7170)
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6914 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/macros.html
+++ b/trac/templates/macros.html
@@ -226,7 +226,7 @@
     <table class="progress" style="$style">
       <tr>
         <td py:for="idx, interval in enumerate(stats.intervals)"
-            class="$interval.css_class" style="width: ${interval.percent}%">
+            class="$interval.css_class" style="${interval.percent and 'width: %d%%' % interval.percent or 'display: none'}">
           <a href="${interval_hrefs[idx]}"
             title="${interval.count} of ${stats.count} ${stats.unit}${
             stats.count != 1 and 's' or ''} ${interval.title}"></a>
